--- a/album/mc-style.css
+++ b/album/mc-style.css
@@ -15,11 +15,12 @@ body {
 	width: 320px;
 	height: 480px;
 	overflow: hidden;
+	border-radius: 2%;
 }
 .player .main {
 	width: 100%;
 	height: 100%;
-	background: #222;
+	background: rgb(0, 0, 0, 0.5);
 	transition:all 500ms ease-in-out;
 }
 .player .main .thumbnail img {
@@ -139,14 +140,14 @@ body {
 }
 .player .list .item .details p {
 	color: #aaa;
-	font-size: 15px;
+	font-size: 14px;
 }
 .player .player-list::-webkit-scrollbar {
 	width: 5px;
 	background: #222;
 }
 .player .player-list::-webkit-scrollbar-thumb {
-	background: #00acee;
+	background: linear-gradient(135deg,navy,lightblue,navy,purple,pink,purple);
 }
 .player.activeSongList .player-list {
 	margin-top: -350px;
