--- a/index.css
+++ b/index.css
@@ -3,10 +3,18 @@
     margin: 0;
 }
 
+h1{
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: minmax(2000px, auto);
+    grid-auto-rows: minmax(200px, auto);
     gap: 10px;
     padding: 10px;
     grid-auto-flow: dense;
@@ -31,7 +39,7 @@ body {
     font-family: sans-serif;
     font-size: 0.7rem;
 
-	background: url(burbujasHD.jpg);
+	background: url(libros/img/burbujasHD.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -55,7 +63,7 @@ body::before{
 
 @media (max-width: 768px) {
     body {
-        font-size: 0.5rem;
+        font-size: 0.6rem;
     }
 }
 @media (min-width: 1024px) {
