--- a/libros/style.css
+++ b/libros/style.css
@@ -13,8 +13,8 @@ h1{
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
-    grid-auto-rows: minmax(162px, auto);
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
     gap: 10px;
     padding: 10px;
     grid-auto-flow: dense;
@@ -23,14 +23,14 @@ h1{
 
 @media (max-width: 768px) {
     .grid-container {
-        grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
-        grid-auto-rows: minmax(102px, auto);
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        grid-auto-rows: minmax(100px, auto);
     }
 }
 @media (min-width: 1024px) {
     .grid-container {
-        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-        grid-auto-rows: minmax(223px, auto);
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-auto-rows: minmax(200px, auto);
     }
 }
 
@@ -39,7 +39,7 @@ body {
     font-family: sans-serif;
     font-size: 0.7rem;
 
-	background: url(libros/img/burbujasHD.jpg);
+	background: url(img/burbujasHD.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -63,7 +63,7 @@ body::before{
 
 @media (max-width: 768px) {
     body {
-        font-size: 0.7rem;
+        font-size: 0.6rem;
     }
 }
 @media (min-width: 1024px) {
@@ -74,7 +74,7 @@ body::before{
 
 .grid-items{
     width: 100%;
-    height: 100%;
+    height: 90%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -87,21 +87,28 @@ ul {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+.pie {
+    height: 10%;
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+}
+
 .iconos {
-    width: 288px;
-    height: 162px;
+    width: 75px;
+    height: 75px;
 }
 
 @media (max-width: 768px) {
     .iconos {
-        width: 188px;
-        height: 102px;
+        width:50px;
+        height: 50px;
     }
 }
 
 @media (min-width: 1024px) {
     .iconos {
-        width: 398px;
-        height: 223px;
+        width: 100px;
+        height: 100px;
     }
 }
