--- a/libros/style.css
+++ b/libros/style.css
@@ -8,11 +8,10 @@
     gap: 2vh;
     padding: 1vh;
     grid-auto-flow: dense;
-    height: 30vh;
-    font-size: 3vh;
+    font-size: 2vh;
     color: white;
-    grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
-    grid-auto-rows: minmax(20%, auto);
+    grid-template-columns: repeat(auto-fill, minmax(25vw, 1fr));
+    grid-auto-rows: minmax(4vh, auto);
 }
 
 body {
@@ -40,7 +39,7 @@ body::before{
 }
 
 .titulo {
-    font-size: 4vh;
+    font-size: 2vh;
     text-align: center;
     color: white;
     padding: 1vh;
@@ -58,11 +57,12 @@ body::before{
 }
 
 ul {
-    padding: 1vh;
+    padding: 0vh;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 a {
+    text-align: center;
     text-decoration: none;
     color: white;
 }
