--- a/libros/style.css
+++ b/libros/style.css
@@ -39,7 +39,7 @@ body::before{
 }
 
 .titulo {
-    font-size: 2vh;
+    font-size: 3vh;
     text-align: center;
     color: white;
     padding: 1vh;
@@ -70,13 +70,13 @@ a {
 
 @media (orientation: landscape) {
     .grid-container {
-        font-size: 5vh;
-        grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
-        grid-auto-rows: minmax(40%, auto);
+        font-size: 4vh;
+        grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
+        grid-auto-rows: minmax(7vh, auto);
     }
 
     .titulo {
-        font-size: 6vh;
+        font-size: 5vh;
     }
 }
 
