--- a/index.css
+++ b/index.css
@@ -3,11 +3,12 @@
     margin: 0;
 }
 
+
 .grid-container {
     display: grid;
-    gap: 1.5vh;
-    grid-template-columns: repeat(auto-fill, minmax(20vh, 1fr));
-    grid-auto-rows: minmax(20vh, auto);
+    gap: 2vw;
+    grid-template-columns: repeat(auto-fill, minmax(29vw, 1fr));
+    grid-auto-rows: minmax(29vw, auto);
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 	background-attachment: fixed;
 	justify-content: center;
 	align-items: center;
-    margin: 1vh;
+    margin: 1vw;
 }
 
 body::before{
@@ -44,17 +45,32 @@ body::before{
 }
 
 ul {
-    border-radius: 1vh;
-    padding: 1vh;
+    border-radius: 2vw;
+    padding: 2vw;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
 
 .iconos {
-    border-radius: 1vh;
-    width: 19.5vh;
-    height: 19.5vh;
+    border-radius: 2vw;
+    width: 28vw;
+    height: 28vw;
 }
 
+/*Orientacion Vertical*/
 
+@media (orientation: landscape) {
+
+    .grid-container {
+        gap: 2vw;
+        grid-template-columns: repeat(auto-fill, minmax(21.5vw, 1fr));
+        grid-auto-rows: minmax(21.5vw, auto);
+    }
+
+    .iconos {
+        border-radius: 1vw;
+        width: 21vw;
+        height: 21vw;
+    }
+}
 
