--- a/libros/style.css
+++ b/libros/style.css
@@ -5,13 +5,13 @@
 
 .grid-container {
     display: grid;
-    gap: 2vh;
-    padding: 1vh;
+    gap: 2vw;
+    padding: 1vw;
     grid-auto-flow: dense;
-    font-size: 2vh;
+    font-size: 4vw;
     color: white;
     grid-template-columns: repeat(auto-fill, minmax(25vw, 1fr));
-    grid-auto-rows: minmax(4vh, auto);
+    grid-auto-rows: minmax(8vw, auto);
 }
 
 body {
@@ -24,6 +24,7 @@ body {
 	background-attachment: fixed;
 	justify-content: center;
 	align-items: center;
+    margin: 1vw;
 }
 
 body::before{
@@ -40,13 +41,14 @@ body::before{
 
 .titulo {
     z-index: 1;
-    padding: 1vh;
-    font-size: 3vh;
+    padding: 1vw;
+    margin: 1vw;
+    font-size: 6vw;
     text-align: center;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     position:sticky;
-    top: 0vh;
+    top: 0vw;
 
 }
 
@@ -59,10 +61,10 @@ body::before{
 }
 
 ul {
-    padding: 0vh;
+    padding: 1vw;
     background-color: rgba(0, 0, 0, 0.2);
     position:sticky;
-    top: 1vh;
+    top: 1vw;
 }
 
 a {
@@ -74,13 +76,13 @@ a {
 
 @media (orientation: landscape) {
     .grid-container {
-        font-size: 4vh;
+        font-size: 3vw;
         grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
-        grid-auto-rows: minmax(7vh, auto);
+        grid-auto-rows: minmax(6vw, auto);
     }
 
     .titulo {
-        font-size: 5vh;
-        padding: 1.5vh;
+        font-size: 4vw;
+        padding: 1.2vw;
     }
 }
